# UwU-Task-Manager

./: .gitignore  readme.md  test copy.py  test.py
app/modules/messages_app/: forms.py  models.py  urls.py  views.py
app/modules/messages_app/migrations/: 0001_initial.py
app/templates/messages_app/: messages.html
app/templates/messages_app/src/js/: ajax.js
app2/: db.sqlite3  index.html  index.js  package.json
app2/app2/: settings.py  urls.py
app2/modules/messages_app/: urls.py  views.py
app2/templates/messages_app/: messages.html
app2/templates/messages_app/static/css/: style.css
app2/templates/messages_app/static/js/: ajax.js  main.js
dll/Dll1/: Dll1.sln
dll/Dll1/Dll1/: Dll1.vcxproj  Dll1.vcxproj.filters  TaskManager.cpp  TaskManager.h
dll/Dll1/Dll1/x64/Debug/: Dll1.dll.recipe  Dll1.ilk  vc143.idb
dll/Dll1/try/: test.cpp  try.vcxproj
dll/Dll1/try/x64/Debug/: try.exe.recipe  try.ilk  vc143.idb
dll/Dll1/try2/: test2.cpp  try2.vcxproj
dll/Dll1/try3/: main.cpp  try3.vcxproj
dll/Dll1/try5/: 5.cpp  try5.vcxproj
dll/Dll1/try6/: 6.cpp  try6.vcxproj
dll/Dll1/try7/: try7.cpp  try7.vcxproj  try7.vcxproj.filters
dll/Dll1/x64/Debug/: Dll1.exp  Dll1.lib
dll/test process/: test process.sln
dll/test process/test process/: Source.cpp  test process.vcxproj
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
tauri-app2/: index.html  package.json
tauri-app2/src/: main.ts  styles.css
tauri-app2/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
tauri-app2/src-tauri/icons/: icon.icns
tauri-app2/src-tauri/src/: lib.rs  main.rs
(+88 files in other folders)
